# oscars-capstone-repo

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: clean_oscars.csv
data/raw/: unclean_oscars.csv
notebooks/: transform_oscars.ipynb
scripts/: run_etl.py
src/extract/: extract.py  extract_oscars.py  extract_query.py
src/load/: load.py  load_oscars.py
src/sql/: extract_oscars.sql
src/transform/: clean_oscars.py  features.py  transform.py
src/utils/: date_utils.py  db_utils.py  file_utils.py  sql_utils.py
tests/: conftest.py  run_tests.py
tests/component_tests/: test_clean_oscars_output.py
tests/e2e_tests/: test_etl_pipeline.py
tests/integration_tests/: conftest.py  test_extract_transform_integration.py
tests/integration_tests.py/: test_extract_oscars.py
tests/test_data/: expected_oscars_cleaned.csv
tests/unit_tests/: test_clean_oscars.py  test_extract_oscars.py
